# two-level-os-lab

./: Cargo.toml  README.md  justfile
machine-app-qemu/: Cargo.toml  justfile  link.ld
machine-app-qemu/src/: hal.rs  main.rs
machine-firmware-k210/: Cargo.toml  build.rs  justfile  memory.x  payload.x
machine-firmware-k210/.cargo/: config.toml
machine-firmware-k210/src/: main.rs
machine-firmware-qemu/: Cargo.toml  justfile  link.ld
machine-firmware-qemu/src/: hal.rs  main.rs
machine-firmware-qemu/src/hal/: clint.rs  ns16550a.rs
machine-rustsbi/: Cargo.toml
machine-rustsbi/src/: ecall.rs  hart_mask.rs  ipi.rs  legacy_stdio.rs  lib.rs  privileged.rs  timer.rs
machine-rustsbi/src/ecall/: base.rs  ipi.rs  legacy.rs  timer.rs
supervisor-app/: Cargo.toml  justfile
supervisor-app/.cargo/: config.toml
supervisor-app/src/: main.rs
supervisor-kernel/: Cargo.toml  build.rs  justfile  kernel-memory.x
supervisor-kernel/src/: main.rs
