[package]
name = "machine-firmware-k210"
version = "0.1.0"
authors = ["luojia65 <me@luojia.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv-rt = "0.7.2"
k210-hal = { git = "https://github.com/rcore-os/k210-hal" }
