[package]
name = "machine-firmware-k210"
version = "0.1.0"
authors = ["luojia65 <me@luojia.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv-rt = "0.8"
riscv = "0.6"
linked_list_allocator = "0.8"
machine-rustsbi = { path = "../machine-rustsbi" }
k210-hal = { git = "https://github.com/riscv-rust/k210-hal" }
