[package]
name = "supervisor-kernel"
version = "0.1.0"
authors = ["luojia65 <me@luojia.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv-sbi-rt = { git = "https://github.com/rcore-os/riscv-sbi-rt" }
riscv-sbi = { git = "https://github.com/rcore-os/riscv-sbi" }
linked_list_allocator = "0.8"
